--- a/templates/profile.html
+++ b/templates/profile.html
@@ -16,16 +16,7 @@
         <span style="font-weight: bold;">Разместить объявление</span>
       </a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link" href="{% url 'sign_in' %}">
-        <span style="font-weight: bold;">Регистрация</span>
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="{% url 'login' %}">
-        <span style="font-weight: bold;">Войти</span>
-      </a>
-    </li>
+    {% if user.is_authenticated %} 
     <li class="nav-item">
       <a class="nav-link active" aria-current="page" href="{% url 'profile' %}">
         <span style="font-weight: bold;">Профиль</span>
@@ -34,8 +25,16 @@
     <li class="nav-item">
       <a class="nav-link" href="{% url 'logout' %}">
         <span style="font-weight: bold;">Выйти</span>
-      </a>
+      </a> 
     </li>
+    {% else %} 
+    <li class="nav-item">
+      <a class="nav-link" href="{% url 'login' %}">Войти</a> 
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="{% url 'sign_in' %}">Регистрация</a>
+    </li> 
+    {% endif %}
   </ul>
 <div class="col" style="margin: 50px;">
   <div class="display-2">
