--- a/templates/advertisement-post.html
+++ b/templates/advertisement-post.html
@@ -2,7 +2,7 @@
 {% extends 'base.html' %}
 <!-- подключил шаблон html для наследования -->
 
-{% block title %} Advertisement-post {% endblock %}
+{% block title %} Разместить объявление {% endblock %}
 
 
 {% block content %}
