--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
-<!-- подключение шаблона -->
+<!-- подключили шаблон(унаследовали) -->
 {% load static %}
-<!-- подключение переменой статики  static =    http://127.0.0.1:8000/static/-->
+<!-- подлючакете переменную static которая указывает ссылку на статические файлы -->
+<!-- http://127.0.0.1:8000/static/ -->
 {% block title %}
 Главная
 {% endblock %}
@@ -9,7 +10,7 @@
 {% block content %}
 <ul class="nav nav-pills sticky-top bg-white nav-fill">
   <li class="nav-item">
-    <a class="nav-link active" aria-current="page" href="{% url 'home' %}">
+    <a class="nav-link active" href="{% url 'home' %}">
       <span style="font-weight: bold;">Главная</span>
     </a>
   </li>
@@ -22,31 +23,37 @@
       <span style="font-weight: bold;">Разместить объявление</span>
     </a>
   </li>
-  {% if user.is_authenticated %} 
+  <!-- если пользователь не авторизован -->
+  {% if not user.is_authenticated %}
   <li class="nav-item">
-    <a class="nav-link" href="{% url 'profile' %}">
+    <a class="nav-link" href="{% url 'sign_in' %}">
+      <span style="font-weight: bold;">Регистрация</span>
+    </a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="{% url 'login' %}">
+      <span style="font-weight: bold;">Войти</span>
+    </a>
+  </li>
+  {% else %}
+  <li class="nav-item">
+    <a class="nav-link " aria-current="page" href="{% url 'profile' %}">
       <span style="font-weight: bold;">Профиль</span>
     </a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="{% url 'logout' %}">
       <span style="font-weight: bold;">Выйти</span>
-    </a> 
+    </a>
   </li>
-  {% else %} 
-  <li class="nav-item">
-    <a class="nav-link" href="{% url 'login' %}">Войти</a> 
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="{% url 'sign_in' %}">Регистрация</a>
-  </li> 
   {% endif %}
 </ul>
 
 <div id="carouselExampleControls" class="carousel slide bg-primary" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="{% static 'img/adv.png' %}" class="mx-auto d-block w-33" alt="...">
+  <!-- http://127.0.0.1:8000/static/img/adv.png -->
+      <img src="{%static 'img/adv.png'%}" class="mx-auto d-block w-33" alt="...">
     </div>
     <div class="carousel-item">
       <img src="{% static 'img/adv.png' %}" class="mx-auto d-block w-33" alt="...">
@@ -85,135 +92,63 @@
         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Еще что-нибудь</a>
       </li>
     </ul>
-    <form class="row g-3">
+
+
+<!-- форма для поиска  -->
+    <form class="row g-3" method="get">
       <div class="col-auto w-50">
-        <input type="text" class="form-control">
+        <input type="text" class="form-control" name='query' value="{% if title %}{{title}}{% endif %}">
+        <!-- если есть title то соатвляю его в строке  -->
       </div>
       <div class="col-auto">
         <button type="submit" class="btn btn-success mb-3">Найти</button>
       </div>
     </form>
+
+
+
   </div>
   <div class="col">
 
-    <!-- блок обьявления -->
-    {% for adv in advertisiments%}
+    
+   
+
+
+    <!-- начало моего обьявления -->
+    {% for adv in advertisements%}
     <div class="card mb-2" style="max-width: 1200px; margin-top: 20px;">
       <div class="row g-0">
         <div class="col-md-4">
-          <a href="advertisement.html" class="nav-link">
-            {% if adv.image %}
-            <img src="  {{adv.image.url}} " class="img-fluid rounded-start" alt="Card title">
-            {% else %}
-            <img src="{% static 'img/adv.png' %}" class="img-fluid rounded-start" alt="Card title">
+          <a href="{{ adv.get_absolute_url }}" class="nav-link">
+            {% if adv.image %}  <!-- проверяю что есть картинка -->
+              <img src=" {{adv.image.url}} " class="img-fluid rounded-start" alt="Card title">
+            {% else %}  <!-- иначе -->
+              <img src="{% static 'img/adv.png' %}" class="img-fluid rounded-start" alt="Card title">
             {% endif %}
+            
           </a>
         </div>
         <div class="col-md-8">
           <div class="card-body">
             <h5 class="card-title">
-              <a href="advertisement.html" class="nav-link"><strong>{{adv.title}}</strong></a>
+              <a href="{{ adv.get_absolute_url }}" class="nav-link"><strong>{{adv.title}}</strong></a>
             </h5>
-            <a href="advertisement.html" class="nav-link">
+            <a href="{{ adv.get_absolute_url }}" class="nav-link">
               <p class="card-text">
                 {{adv.descriptions}}
               </p>
               <span>Автор: {{adv.user}}</span>
-              <p class="card-text"><small class="text-muted">{{adv.created}}</small></p>
+              <p class="card-text"><small class="text-muted">Размещено: {{adv.created}}</small></p>
               <span>Цена: {{adv.prices}}</span>
             </a>
           </div>
         </div>
       </div>
     </div>
-    {% endfor %} <!-- закрытие цикла -->
-    <!-- блок обьявления -->
+    {% endfor %}
+    <!-- конец обьявления -->
 
 
-
-
-
-    <div class="card mb-2" style="max-width: 1200px; margin-top: 20px;">
-      <div class="row g-0">
-        <div class="col-md-4">
-          <a href="advertisement.html" class="nav-link">
-            <img src="{% static 'img/adv.png' %}" class="img-fluid rounded-start" alt="Card title">
-          </a>
-        </div>
-        <div class="col-md-8">
-          <div class="card-body">
-            <h5 class="card-title">
-              <a href="advertisement.html" class="nav-link"><strong>Продаю балкон</strong></a>
-            </h5>
-            <a href="advertisement.html" class="nav-link">
-              <p class="card-text">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas, nulla eos neque dolorum quis aliquid
-                deleniti molestias, nobis debitis expedita, fugiat ea. Delectus harum quo dolores modi cupiditate in
-                tempore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas quis similique quas
-                architecto doloremque culpa consequatur excepturi provident quo fugit repudiandae inventore quae ea
-                sequi, recusandae aliquid veritatis rerum quibusdam?
-              </p>
-              <span>Автор: Никнейм автора объявления</span>
-              <p class="card-text"><small class="text-muted">Размещено: здесь должна стоять дата</small></p>
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="card mb-2" style="max-width: 1200px; margin-top: 20px;">
-      <div class="row g-0">
-        <div class="col-md-4">
-          <a href="advertisement.html" class="nav-link">
-            <img src="{% static 'img/adv.png' %}" class="img-fluid rounded-start" alt="Card title">
-          </a>
-        </div>
-        <div class="col-md-8">
-          <div class="card-body">
-            <h5 class="card-title">
-              <a href="advertisement.html" class="nav-link"><strong>Продам гараж</strong></a>
-            </h5>
-            <a href="advertisement.html" class="nav-link">
-              <p class="card-text">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas, nulla eos neque dolorum quis aliquid
-                deleniti molestias, nobis debitis expedita, fugiat ea. Delectus harum quo dolores modi cupiditate in
-                tempore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas quis similique quas
-                architecto doloremque culpa consequatur excepturi provident quo fugit repudiandae inventore quae ea
-                sequi, recusandae aliquid veritatis rerum quibusdam?
-              </p>
-              <span>Автор: Никнейм автора объявления</span>
-              <p class="card-text"><small class="text-muted">Размещено: здесь должна стоять дата</small></p>
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="card mb-2" style="max-width: 1200px; margin-top: 20px;">
-      <div class="row g-0">
-        <div class="col-md-4">
-          <a href="advertisement.html" class="nav-link">
-            <img src="{% static 'img/adv.png' %}" class="img-fluid rounded-start" alt="Card title">
-          </a>
-        </div>
-        <div class="col-md-8">
-          <div class="card-body">
-            <h5 class="card-title">
-              <a href="advertisement.html" class="nav-link"><strong>Куплю баню</strong></a>
-            </h5>
-            <a href="advertisement.html" class="nav-link">
-              <p class="card-text">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas, nulla eos neque dolorum quis aliquid
-                deleniti molestias, nobis debitis expedita, fugiat ea. Delectus harum quo dolores modi cupiditate in
-                tempore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas quis similique quas
-                architecto doloremque culpa consequatur excepturi provident quo fugit repudiandae inventore quae ea
-                sequi, recusandae aliquid veritatis rerum quibusdam?
-              </p>
-              <span>Автор: Никнейм автора объявления</span>
-              <p class="card-text"><small class="text-muted">Размещено: здесь должна стоять дата</small></p>
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
   </div>
 </div>
 <footer style="padding: 100px;" class="bg-primary">
