--- a/templates/register.html
+++ b/templates/register.html
@@ -1,5 +1,10 @@
 {% extends 'base.html' %}
+
+{% block title %} Регистрация {% endblock %}
+
 {% block content %}
+
+
 
 
 <ul class="nav nav-pills sticky-top bg-white nav-fill">
@@ -17,27 +22,31 @@
       <span style="font-weight: bold;">Разместить объявление</span>
     </a>
   </li>
-  {% if user.is_authenticated %} 
+  <!-- если пользователь не авторизован -->
+  {% if not user.is_authenticated %}
   <li class="nav-item">
-    <a class="nav-link" href="{% url 'profile' %}">
+    <a class="nav-link active" href="{% url 'sign_in' %}">
+      <span style="font-weight: bold;">Регистрация</span>
+    </a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="{% url 'login' %}">
+      <span style="font-weight: bold;">Войти</span>
+    </a>
+  </li>
+  {% else %}
+  <li class="nav-item">
+    <a class="nav-link " aria-current="page" href="{% url 'profile' %}">
       <span style="font-weight: bold;">Профиль</span>
     </a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="{% url 'logout' %}">
       <span style="font-weight: bold;">Выйти</span>
-    </a> 
+    </a>
   </li>
-  {% else %} 
-  <li class="nav-item">
-    <a class="nav-link" href="{% url 'login' %}">Войти</a> 
-  </li>
-  <li class="nav-item">
-    <a class="nav-link active" aria-current="page" href="{% url 'sign_in' %}">Регистрация</a>
-  </li> 
   {% endif %}
 </ul>
-
 
   <div class="row">
     <div class="col" style="margin: 50px;">
@@ -56,15 +65,22 @@
       </div>
     </div>
   </div>
-    
   <div class="container">
-    <form method="post"> 
-      {% csrf_token %} 
-      {{ form.as_p }} 
-            <!-- as_p as_table as_ul -->
-
-
-
+    {{ form.non_field.errors }}
+    <form method="post"> {% csrf_token %}
+      {% for field in form %}
+      <div class="row mb-3">
+        <div class="col">
+          <label class="col-sm-4 col-form-label offset-4">{{ field.label }}</label>
+          <div class="col-sm-4 offset-4 w-25">
+            {{ field }}
+            {% if field.errors %}
+            <div class="form-label bg-warning" style="margin: 10px 0px;"> {{ field.errors }}</div>
+            {% endif %}
+          </div>
+        </div>
+      </div>
+      {% endfor %}
       <div class="row mb-3 offset-sm-5">
         <div class="col">
           <button type="submit" class="btn btn-success">Принять</button>
