--- a/templates/index.html
+++ b/templates/index.html
@@ -83,7 +83,7 @@
         <a class="nav-link active" aria-current="page" href="#">Проверенные продавцы</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Новинки</a>
+        <a class="nav-link" href="/novinki">Новинки</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Избранное</a>
@@ -115,7 +115,7 @@
 
 
     <!-- начало моего обьявления -->
-    {% for adv in advertisements%}
+    {%for adv in advertisements%}
     <div class="card mb-2" style="max-width: 1200px; margin-top: 20px;">
       <div class="row g-0">
         <div class="col-md-4">
