--- a/templates/index.html
+++ b/templates/index.html
@@ -83,7 +83,10 @@
         <a class="nav-link active" aria-current="page" href="#">Проверенные продавцы</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/novinki">Новинки</a>
+        <a class="nav-link" href="/novinki">Новинки за неделю</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/novinki_za_den">Новинки за день</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Избранное</a>
