--- a/templates/novinki_den.html
+++ b/templates/novinki_den.html
@@ -88,9 +88,6 @@
 
 
 
-
-  
-
 <div class="container">
     <div class="row">
       <ul class="nav nav-tabs bg-white">
@@ -98,18 +95,16 @@
           <a class="nav-link" aria-current="page" href="..">Проверенные продавцы</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="#">Новинки за неделю</a>
+          <a class="nav-link" href="../novinki">Новинки за неделю</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../novinki_za_den">Новинки за день</a>
+            <a class="nav-link active" href="#">Новинки за день</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Избранное</a>
         </li>
       </ul>
     </div>
-
-
 
 
 </div>
@@ -153,16 +148,6 @@
 {% endfor %}
   <!-- конец обьявления -->
 </div>
-
-
-
-
-
-
-
-
-
-
 
 
 
