--- a/templates/favorite.html
+++ b/templates/favorite.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} Лучшие пользователи {% endblock %}
+{% block title %} Избранное {% endblock %}
 
 {% block content %}
   <footer style="padding: 50px;" class="bg-primary">
@@ -69,10 +69,6 @@
         <a class="nav-link active" href="#">Избранное</a>
       </li>
     </ul>
-
-
-
-
 
 
 
