--- a/templates/index.html
+++ b/templates/index.html
@@ -89,7 +89,7 @@
         <a class="nav-link" href="/novinki_za_den">Новинки за день</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Избранное</a>
+        <a class="nav-link" href="/favorites">Избранное</a>
       </li>
       <li class="nav-item">
         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Еще что-нибудь</a>
