--- a/templates/all-fav.html
+++ b/templates/all-fav.html
@@ -5,7 +5,7 @@
 {% block content %}
   <footer style="padding: 50px;" class="bg-primary">
     <nav class="navbar navbar-expand-sm navbar-dark">
-      <a class="navbar-brand" href="../post_adv">Добавьте сюда что хотите</a>
+      <a class="navbar-brand" href="#">Добавьте сюда что хотите</a>
       <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse"
         data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
         aria-label="Toggle navigation"></button>
@@ -23,11 +23,7 @@
       <span style="font-weight: bold;">Топ продавцов</span>
     </a>
   </li>
-  <li class="nav-item">
-    <a class="nav-link" href="{% url 'post_adv' %}">
-      <span style="font-weight: bold;">Разместить объявление</span>
-    </a>
-  </li>
+
 
 
   <!-- если пользователь не авторизован -->
@@ -43,6 +39,11 @@
     </a>
   </li>
   {% else %}
+  <li class="nav-item">
+    <a class="nav-link" href="{% url 'post_adv' %}">
+      <span style="font-weight: bold;">Разместить объявление</span>
+    </a>
+  </li>
   <li class="nav-item">
     <a class="nav-link" aria-current="page" href="{% url 'profile' %}">
       <span style="font-weight: bold;">Профиль</span>
