--- a/templates/login.html
+++ b/templates/login.html
@@ -15,12 +15,13 @@
     <a class="nav-link" href="{% url 'top_sellers' %}"><span style="font-weight: bold;">Топ продавцов</span>
     </a>
   </li>
+
+  {% if user.is_authenticated %} 
   <li class="nav-item">
     <a class="nav-link" href="{% url 'post_adv' %}">
       <span style="font-weight: bold;">Разместить объявление</span>
     </a>
   </li>
-  {% if user.is_authenticated %} 
   <li class="nav-item">
     <a class="nav-link" href="{% url 'profile' %}">
       <span style="font-weight: bold;">Профиль</span>
@@ -32,12 +33,17 @@
     </a> 
   </li>
   {% else %} 
+
   <li class="nav-item">
-    <a class="nav-link active" aria-current="page" href="{% url 'login' %}">Войти</a> 
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="{% url 'sign_in' %}">Регистрация</a>
+    <a class="nav-link" href="{% url 'sign_in' %}">
+      <span style="font-weight: bold;">Регистрация</span>
+    </a>
   </li> 
+  <li class="nav-item">
+    <a class="nav-link active" aria-current="page" href="{% url 'login' %}">
+      <span style="font-weight: bold;">Войти</span>
+    </a> 
+  </li>
   {% endif %}
 </ul>
   <div class="row">
