--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,22 @@
   <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
   <link rel="stylesheet" href="{% static 'css/fontello.css' %}">
   <title>{% block title %} Index {% endblock %}</title>
+  <style> .fav_button_del{
+    margin-top: 15px;
+    border: 3px solid rgb(48, 123, 253); 
+    border-radius: 5px; 
+    align-items: center; 
+    background-color: white; 
+    color: rgb(48, 123, 253);} 
+    .fav_button_on{
+      margin-top: 15px; 
+      border: 3px solid rgb(48, 123, 253); 
+      border-radius: 5px; 
+      align-items: center; 
+      background-color: rgb(48, 123, 253); 
+      color: white;
+    }
+    </style>
 </head>
 
 <body>
