--- a/templates/novinki_den.html
+++ b/templates/novinki_den.html
@@ -145,12 +145,12 @@
           {% if user in adv.favorites.all %}
           <form action="{% url 'remove_from_favorite' adv.id %}" method="post">
             {% csrf_token %}
-            <button type="submit">Удалить из избранного</button>
+            <button type="submit" class="fav_button_del">Удалить из избранного</button>
           </form>
           {% else %}
           <form action="{% url 'add_to_favorites' adv.id %}" method="post">
             {% csrf_token %}
-            <button type="submit">Добавить в избранное</button>
+            <button type="submit" class="fav_button_on" >Добавить в избранное</button>
           </form>
           {% endif %}
         </div>
