--- a/templates/all-fav.html
+++ b/templates/all-fav.html
@@ -3,14 +3,6 @@
 {% block title %} Избранное{% endblock %}
 
 {% block content %}
-  <footer style="padding: 50px;" class="bg-primary">
-    <nav class="navbar navbar-expand-sm navbar-dark">
-      <a class="navbar-brand" href="#">Добавьте сюда что хотите</a>
-      <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse"
-        data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
-        aria-label="Toggle navigation"></button>
-    </nav>
-  </footer>
 <!--указать блок -->
 <ul class="nav nav-pills sticky-top bg-white nav-fill">
   <li class="nav-item">
@@ -113,10 +105,16 @@
   </div>
   {% endfor %}
 </div>
-
-
-
-
-
-
+<footer style="padding:25px;" class="bg-primary">
+  <div style="display: flex; justify-content: space-around;">
+    <div style="display:flex; align-items: center; padding-top: 15px;" >
+      <p style="font-size: large; color: rgb(255, 255, 255); margin-right: 10px;" >Сайт был создан вместе с командой Maximum Education</p>
+      <p style="font-size: large; color: rgb(255, 255, 255); margin-left: 10px;">А также человеком именем Dan</p>
+    </div>
+    <div style="width: 225px; display: flex; justify-content: space-between;">
+      <a href="https://github.com/Teslanot"><img src="/static/img/github_img.png" alt="GitHub" style="width: 50px; height:50px;"></a>
+      <a href="https://education.maximumtest.ru"><img src="/static/img/Maximum_Education.png" alt="Maximum Education" style="width: 125px; height:50px;"></a>
+    </div>
+  </div>
+</footer>
 {% endblock %}
