--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,14 +4,6 @@
 {% block title %} Профиль {% endblock %}
 
 {% block content %}
-<footer style="padding: 50px;" class="bg-primary">
-  <nav class="navbar navbar-expand-sm navbar-dark">
-    <a class="navbar-brand" href="../../post_adv">Добавьте сюда что хотите</a>
-    <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse"
-      data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false"
-      aria-label="Toggle navigation"></button>
-  </nav>
-</footer>
   <ul class="nav nav-pills sticky-top bg-white nav-fill">
     <li class="nav-item">
       <a class="nav-link" href="{% url 'home' %}">
@@ -52,4 +44,16 @@
     <span class="badge bg-primary">Сейчас вы находитесь на сайте под ником {{ user }}.</span>
   </div>
 </div>
+<footer style="padding:25px;" class="bg-primary">
+  <div style="display: flex; justify-content: space-around;">
+    <div style="display:flex; align-items: center; padding-top: 15px;" >
+      <p style="font-size: large; color: rgb(255, 255, 255); margin-right: 10px;" >Сайт был создан вместе с командой Maximum Education</p>
+      <p style="font-size: large; color: rgb(255, 255, 255); margin-left: 10px;">А также человеком именем Dan</p>
+    </div>
+    <div style="width: 225px; display: flex; justify-content: space-between;">
+      <a href="https://github.com/Teslanot"><img src="/static/img/github_img.png" alt="GitHub" style="width: 50px; height:50px;"></a>
+      <a href="https://education.maximumtest.ru"><img src="/static/img/Maximum_Education.png" alt="Maximum Education" style="width: 125px; height:50px;"></a>
+    </div>
+  </div>
+</footer>
 {% endblock %}
