--- a/templates/index.html
+++ b/templates/index.html
@@ -161,7 +161,7 @@
 <footer style="padding:25px;" class="bg-primary">
   <div style="display: flex; justify-content: space-around;">
     <div style="display:flex; align-items: center; padding-top: 15px;" >
-      <p style="font-size: large; color: rgb(255, 255, 255); margin-right: 10px;" >Сайт был создан вместе с командой Maximum Education</p>
+      <p style="font-size: large; color: rgb(255, 255, 255); margin-right: 10px;" >Сайт был создан по программе "Код будущего"</p>
       <p style="font-size: large; color: rgb(255, 255, 255); margin-left: 10px;">А также человеком именем Dan</p>
     </div>
     <div style="width: 225px; display: flex; justify-content: space-between;">
